--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LukiSteve</title>
+    <title>MokrySuchar</title>
     <link rel="shortcut icon" type="lukistR.png" href="images/lukistR.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
