--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MokrySuchar</title>
-    <link rel="shortcut icon" type="lukistR.png" href="images/lukistR.png">
+    <link rel="shortcut icon" type="MS.png" href="images/MS.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
