--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@ body {
     <div class="page-container">
         <header class="profile-header">
             <div class="profile-avatar">
-                <img src="images/avatar.png" alt="LukiSteve Avatar" class="avatar-image">
+                <img src="images/suchar.png" alt="MokrySuchar Avatar" class="avatar-image">
             </div>
-            <h1 class="profile-name">LukiSteve</h1>
+            <h1 class="profile-name">MokrySuchar</h1>
             <div class="social-icons">
                 <a href="https://www.twitch.tv/lukisteve" target="_blank" class="link-button">
                     <div class="link-icon">
