--- a/index.html
+++ b/index.html
@@ -215,25 +215,25 @@ body {
             </div>
             <h1 class="profile-name">MokrySuchar</h1>
             <div class="social-icons">
-                <a href="https://www.twitch.tv/lukisteve" target="_blank" class="link-button">
+                <a href="https://www.twitch.tv/MokrySuchar" target="_blank" class="link-button">
                     <div class="link-icon">
-                        <img src="images/twitch4.png" alt="Twitch Logo">
+                        <img src="images/twitch.png" alt="Twitch Logo">
                     </div>
                     <div class="link-text">
                         <p class="link-title">Twitch</p>
                         <p class="link-subtitle">Streamy na żywo!</p>
                     </div>
                 </a>
-                <a href="https://www.instagram.com/lukisteve_/" target="_blank" class="link-button">
+                <a href="https://www.instagram.com/mokrysuchar" target="_blank" class="link-button">
                     <div class="link-icon">
-                        <img src="images/instagram5.png" alt="Instagram Logo">
+                        <img src="images/instagram.png" alt="Instagram Logo">
                     </div>
                     <div class="link-text">
                         <p class="link-title">Instagram</p>
                         <p class="link-subtitle">Zobacz zdjęcia!</p>
                     </div>
                 </a>
-                <a href="https://kick.com/lukisteve" target="_blank" class="link-button">
+                <a href="https://kick.com/MokrySuchar" target="_blank" class="link-button">
                     <div class="link-icon">
                         <img src="images/kick.png" alt="Kick Logo">
                     </div>
