--- a/index.html
+++ b/index.html
@@ -242,8 +242,17 @@ body {
                         <p class="link-subtitle">Streamy na żywo!</p>
                     </div>
                 </a>
-            </div>
-        </header>
+    <a href="https://discord.gg/piraci" target="_blank" class="link-button">
+        <div class="link-icon">
+            <img src="images/discord.png" alt="Discord Logo">
+        </div>
+        <div class="link-text">
+            <p class="link-title">Discord</p>
+            <p class="link-subtitle">Wpadnij na serwer!</p>
+        </div>
+    </a>
+</div>
+</header>
 
         <main class="links-container">
             <a href="https://csgo-skins.com/?ref=LUKI" target="_blank" class="link-button">
