--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ body {
                 </a>
     <a href="https://discord.gg/piraci" target="_blank" class="link-button">
         <div class="link-icon">
-            <img src="images/discord.png" alt="Discord Logo">
+            <img src="images/discord2.png" alt="Discord Logo">
         </div>
         <div class="link-text">
             <p class="link-title">Discord</p>
