--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ body {
         </div>
         <div class="link-text">
             <p class="link-title">Discord</p>
-            <p class="link-subtitle">Wpadnij na serwer!</p>
+            <p class="link-subtitle">Wpadnij na sucharownie!</p>
         </div>
     </a>
 </div>
