--- a/index.html
+++ b/index.html
@@ -242,13 +242,13 @@ body {
                         <p class="link-subtitle">Streamy na żywo!</p>
                     </div>
                 </a>
-    <a href="https://discord.gg/piraci" target="_blank" class="link-button">
+    <a href="https://discord.com/invite/kw9TSBCh3Q" target="_blank" class="link-button">
         <div class="link-icon">
             <img src="images/discord2.png" alt="Discord Logo">
         </div>
         <div class="link-text">
             <p class="link-title">Discord</p>
-            <p class="link-subtitle">Wpadnij na sucharownie!</p>
+            <p class="link-subtitle">Wpadnij na Sucharownie!</p>
         </div>
     </a>
 </div>
