--- a/index.html
+++ b/index.html
@@ -241,6 +241,15 @@ body {
                         <p class="link-title">Kick</p>
                         <p class="link-subtitle">Streamy na żywo!</p>
                     </div>
+                </a> 
+                <a href="https://x.com/MokrySuchar" target="_blank" class="link-button">
+                    <div class="link-icon">
+                        <img src="images/twitter.png" alt="Kick Logo">
+                    </div>
+                    <div class="link-text">
+                        <p class="link-title">Twitter</p>
+                        <p class="link-subtitle">Mój twiter!</p>
+                    </div>
                 </a>
     <a href="https://discord.com/invite/kw9TSBCh3Q" target="_blank" class="link-button">
         <div class="link-icon">
