--- a/index.html
+++ b/index.html
@@ -274,9 +274,18 @@ body {
                     <p class="link-subtitle"></p>
                 </div>
             </a>
+            <main class="links-container">
+            <a href="https://csgo-skins.com/?ref=LUKI" target="_blank" class="link-button">
+                <img src="images/tylko18.png" alt="18+" class="age-restriction-image">
+                <div class="link-icon">
+                    <img src="images/csgoskins.png" alt="CSGOSKINS icon">
+                </div>
+                <div class="link-text">
+                    <p class="link-title">CSGOSKINS - 2.10 I 10% WIĘCEJ DO DOŁADOWANIA</p>
+                    <p class="link-subtitle"></p>
 
-                </a>
-            </div>
+                 </div>
+            </a>
         </main>
     </div>
 </body>
