--- a/index.html
+++ b/index.html
@@ -274,11 +274,12 @@ body {
                     <p class="link-subtitle"></p>
                 </div>
             </a>
+            
             <main class="links-container">
-            <a href="https://csgo-skins.com/?ref=LUKI" target="_blank" class="link-button">
+            <a href="https://www.efortuna.pl/cms/lp/bonusmokrysuchar?utm_source=mokrysuchar&utm_medium=twitch&utm_campaign=SPB_ACQ_MokrySuchar_LP" target="_blank" class="link-button">
                 <img src="images/tylko18.png" alt="18+" class="age-restriction-image">
                 <div class="link-icon">
-                    <img src="images/csgoskins.png" alt="CSGOSKINS icon">
+                    <img src="images/fortuna.png" alt="fortuna icon">
                 </div>
                 <div class="link-text">
                     <p class="link-title">CSGOSKINS - 2.10 I 10% WIĘCEJ DO DOŁADOWANIA</p>
