--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ body {
                     <img src="images/fortuna.png" alt="fortuna icon">
                 </div>
                 <div class="link-text">
-                    <p class="link-title">CSGOSKINS - 2.10 I 10% WIĘCEJ DO DOŁADOWANIA</p>
+                    <p class="link-title">300 ZŁ WE FREEBETACH NA START! KOD: SUCHAR</p>
                     <p class="link-subtitle"></p>
 
                  </div>
