--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ body {
             <a href="https://www.efortuna.pl/cms/lp/bonusmokrysuchar?utm_source=mokrysuchar&utm_medium=twitch&utm_campaign=SPB_ACQ_MokrySuchar_LP" target="_blank" class="link-button">
                 <img src="images/tylko18.png" alt="18+" class="age-restriction-image">
                 <div class="link-icon">
-                    <img src="images/fortuna.png" alt="fortuna icon">
+                    <img src="images/fortuna2.png" alt="fortuna icon">
                 </div>
                 <div class="link-text">
                     <p class="link-title">300 ZŁ WE FREEBETACH NA START! KOD: SUCHAR</p>
