--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ body {
             
             <a href="https://www.instant-gaming.com/pl/?igr=suchar" target="_blank" class="link-button">
                 <div class="link-icon">
-                    <img src="images/instant.png" alt="instant icon">
+                    <img src="images/instant2.png" alt="instant icon">
                 </div>
                 <div class="link-text">
                     <p class="link-title">test</p>
