--- a/index.html
+++ b/index.html
@@ -293,6 +293,16 @@ body {
                 <div class="link-text">
                     <p class="link-title">test</p>
                     <p class="link-subtitle"></p>
+                    </div>
+            </a>
+            
+            <a href="https://pl.weareholy.com/collections/nowicjusze/?ref=MOKRYSUCHAR&utm_source=twitch&utm_medium=creator&utm_campaign=starter_pack_generic.2025.6.1.prospecting.5" target="_blank" class="link-button">
+                <div class="link-icon">
+                    <img src="images/holy.png" alt="instant icon">
+                </div>
+                <div class="link-text">
+                    <p class="link-title">test</p>
+                    <p class="link-subtitle"></p>
             
                </div>
             </a>
