--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ body {
                     </div>
                     <div class="link-text">
                         <p class="link-title">Twitch</p>
-                        <p class="link-subtitle">Streamy na żywo!</p>
+                        <p class="link-subtitle"></p>
                     </div>
                 </a>
                 <a href="https://www.instagram.com/mokrysuchar" target="_blank" class="link-button">
@@ -230,7 +230,7 @@ body {
                     </div>
                     <div class="link-text">
                         <p class="link-title">Instagram</p>
-                        <p class="link-subtitle">Zobacz zdjęcia!</p>
+                        <p class="link-subtitle"></p>
                     </div>
                 </a>
                 <a href="https://kick.com/MokrySuchar" target="_blank" class="link-button">
@@ -239,7 +239,7 @@ body {
                     </div>
                     <div class="link-text">
                         <p class="link-title">Kick</p>
-                        <p class="link-subtitle">Streamy na żywo!</p>
+                        <p class="link-subtitle"></p>
                     </div>
                 </a> 
                 <a href="https://x.com/MokrySuchar" target="_blank" class="link-button">
@@ -248,7 +248,7 @@ body {
                     </div>
                     <div class="link-text">
                         <p class="link-title">Twitter</p>
-                        <p class="link-subtitle">Mój twiter!</p>
+                        <p class="link-subtitle"></p>
                     </div>
                 </a>
     <a href="https://discord.com/invite/kw9TSBCh3Q" target="_blank" class="link-button">
@@ -257,7 +257,7 @@ body {
         </div>
         <div class="link-text">
             <p class="link-title">Discord</p>
-            <p class="link-subtitle">Wpadnij na sucharownie!</p>
+            <p class="link-subtitle"></p>
         </div>
     </a>
 </div>
