--- a/index.html
+++ b/index.html
@@ -303,6 +303,16 @@ body {
                 <div class="link-text">
                     <p class="link-title">test</p>
                     <p class="link-subtitle"></p>
+                    </div>
+            </a>
+            
+            <a href="https://tipo.live/p/mokrysuchar" target="_blank" class="link-button">
+                <div class="link-icon">
+                    <img src="images/tipo.png" alt="instant icon">
+                </div>
+                <div class="link-text">
+                    <p class="link-title">DONATE!</p>
+                    <p class="link-subtitle"></p>
             
                </div>
             </a>
