--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ body {
             
             <a href="https://tipo.live/p/mokrysuchar" target="_blank" class="link-button">
                 <div class="link-icon">
-                    <img src="images/tipo.png" alt="instant icon">
+                    <img src="images/tipo.png" alt="tipo icon">
                 </div>
                 <div class="link-text">
                     <p class="link-title">DONATE!</p>
