--- a/index.html
+++ b/index.html
@@ -316,16 +316,17 @@ body {
             
                </div>
             </a>
-                </main>
-    </div> <!-- zamyka page-container -->
+                        </main>
 
-    <!-- STOPKA Z OSTRZEŻENIEM -->
-    <footer style="margin-top:40px; font-size:12px; color:#aaa; text-align:center; max-width:600px; line-height:1.5; padding:10px;">
-        <strong>⚠️ GRAJ ODPOWIEDZIALNIE — NIE UZALEŻNIAJ SIĘ!</strong><br>
-        Graj odpowiedzialnie. Ta strona zawiera linki do zewnętrznych serwisów. 
-        Korzystanie z nich odbywa się na własną odpowiedzialność i powinno być zgodne 
-        z obowiązującym prawem w Twoim kraju. Nie promujemy działań nielegalnych 
-        i nie ponosimy odpowiedzialności za skutki korzystania z tych serwisów.
-    </footer>
+        <!-- STOPKA Z OSTRZEŻENIEM -->
+        <footer style="margin-top:40px; font-size:11px; color:#aaa; text-align:center; line-height:1.4; opacity:0.8;">
+            <strong>⚠️ GRAJ ODPOWIEDZIALNIE — NIE UZALEŻNIAJ SIĘ!</strong><br>
+            Graj odpowiedzialnie. Ta strona zawiera linki do zewnętrznych serwisów. 
+            Korzystanie z nich odbywa się na własną odpowiedzialność i powinno być zgodne 
+            z obowiązującym prawem w Twoim kraju. Nie promujemy działań nielegalnych 
+            i nie ponosimy odpowiedzialności za skutki korzystania z tych serwisów.
+        </footer>
+    </div> <!-- zamyka page-container -->
 </body>
 </html>
+
