--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ body {
                     <img src="images/fortuna3.png" alt="fortuna icon">
                 </div>
                 <div class="link-text">
-                    <p class="link-title">300 ZŁ WE FREEBETACH NA START! KOD: SUCHAR</p>
+                    <p class="link-title">Z kodem SUCHAR 300 zł we freebetach na start! </p>
                     <p class="link-subtitle"></p>
                     </div>
             </a>
@@ -291,7 +291,7 @@ body {
                     <img src="images/instant2.png" alt="instant icon">
                 </div>
                 <div class="link-text">
-                    <p class="link-title">test</p>
+                    <p class="link-title">Skorzystaj z mojego reflinku na Instant Gaming i ciesz się cenami aż do 90% taniej!</p>
                     <p class="link-subtitle"></p>
                     </div>
             </a>
@@ -301,7 +301,7 @@ body {
                     <img src="images/holy11.png" alt="instant icon">
                 </div>
                 <div class="link-text">
-                    <p class="link-title">test</p>
+                    <p class="link-title">Zamów zestaw startowy Holy! Z kodem: SUCHAR 10% Taniej!</p>
                     <p class="link-subtitle"></p>
                     </div>
             </a>
