--- a/index.html
+++ b/index.html
@@ -92,26 +92,25 @@ body {
     margin-top: 20px;
 }
 
-/* Nowa animacja - ramka ładowania */
+/* Styl dla wszystkich linków w "kafelkach" */
 .link-button {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 15px;
+    background-color: rgba(255, 255, 255, 0.1);
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    border-radius: 12px;
+    text-decoration: none;
+    color: #fff;
+    transition: background-color 0.3s ease, border-color 0.3s ease;
     position: relative;
-    overflow: hidden;
-    transition: all 0.3s ease;
 }
 
-.link-button::before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 0;
-    height: 4px; /* Grubość paska ładowania */
-    background-color: #000080; /* Kolor paska */
-    transition: width 1s ease-out; /* Czas i typ animacji */
-}
-
-.link-button:hover::before {
-    width: 100%; /* Pasek "ładuje się" na 100% szerokości */
+.link-button:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+    /* Kolor obramowania przy najechaniu myszką */
+    border-color: #00008b;
 }
 
 .link-icon {
@@ -330,4 +329,3 @@ body {
     </div> <!-- zamyka page-container -->
 </body>
 </html>
-
