--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ body {
     margin-top: 20px;
 }
 
-/* ZMIENIONO: Styl dla wszystkich linków w "kafelkach" */
+/* Styl dla wszystkich linków w "kafelkach" */
 .link-button {
     display: flex;
     align-items: center;
@@ -105,28 +105,12 @@ body {
     color: #fff;
     transition: background-color 0.3s ease, border-color 0.3s ease;
     position: relative;
-    overflow: hidden;
 }
 
 .link-button:hover {
     background-color: rgba(255, 255, 255, 0.2);
     /* Kolor obramowania przy najechaniu myszką */
     border-color: #00008b;
-}
-
-/* DODANO: Styl dla paska ładowania */
-.link-loading-bar {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 0;
-    height: 4px;
-    background-color: #000080; /* Granatowy kolor */
-    transition: width 0.8s ease-in-out;
-}
-
-.link-button:hover .link-loading-bar {
-    width: 100%;
 }
 
 .link-icon {
@@ -231,6 +215,7 @@ body {
             </div>
             <h1 class="profile-name">MokrySuchar</h1>
             <div class="social-icons">
+                <div class="social-icons">
     <a href="https://www.twitch.tv/MokrySuchar" target="_blank" class="link-button">
         <div class="link-icon">
             <img src="images/twitch.png" alt="Twitch Logo">
@@ -290,7 +275,9 @@ body {
             <p class="link-title">CSGOSKINS - 2.10 I 10% WIĘCEJ DO DOŁADOWANIA</p>
             <p class="link-subtitle"></p>
         </div>
-        <div class="link-loading-bar"></div> </a>
+        <div class="link-loading-bar">
+        </div> 
+    </a>
      
     <a href="https://bit.ly/MokrySuchar_Fortuna_Bonus" target="_blank" class="link-button">
         <img src="images/tylko18.png" alt="18+" class="age-restriction-image">
@@ -301,7 +288,9 @@ body {
             <p class="link-title">Z kodem SUCHAR 300 zł we freebetach na start! </p>
             <p class="link-subtitle"></p>
         </div>
-        <div class="link-loading-bar"></div> </a>
+        <div class="link-loading-bar">
+        </div> 
+    </a>
      
     <a href="https://www.instant-gaming.com/?igr=suchar" target="_blank" class="link-button">
         <div class="link-icon">
@@ -311,7 +300,9 @@ body {
             <p class="link-title">Skorzystaj z mojego reflinku na Instant Gaming i ciesz się cenami aż do 90% taniej!</p>
             <p class="link-subtitle"></p>
         </div>
-        <div class="link-loading-bar"></div> </a>
+        <div class="link-loading-bar">
+            </div> 
+    </a>
      
     <a href="http://pl.weareholy.com/suchar" class="link-button">
         <div class="link-icon">
@@ -321,7 +312,9 @@ body {
             <p class="link-title">Zamów zestaw startowy Holy! Z kodem: SUCHAR 10% Taniej!</p>
             <p class="link-subtitle"></p>
         </div>
-        <div class="link-loading-bar"></div> </a>
+        <div class="link-loading-bar">        
+        </div> 
+    </a>
      
     <a href="https://tipo.live/p/mokrysuchar" target="_blank" class="link-button">
         <div class="link-icon">
@@ -331,7 +324,9 @@ body {
             <p class="link-title">DONATE!</p>
             <p class="link-subtitle"></p>
         </div>
-        <div class="link-loading-bar"></div> </a>
+        <div class="link-loading-bar">
+            </div> 
+    </a>
 </main>
 
         <!-- STOPKA Z OSTRZEŻENIEM -->
