--- a/index.html
+++ b/index.html
@@ -224,7 +224,8 @@ body {
             <p class="link-title">Twitch</p>
             <p class="link-subtitle"></p>
         </div>
-        <div class="link-loading-bar"></div> </a>
+        <div class="link-loading-bar"></div>
+    </a>
     <a href="https://www.instagram.com/mokrysuchar" target="_blank" class="link-button">
         <div class="link-icon">
             <img src="images/instagram.png" alt="Instagram Logo">
@@ -233,7 +234,8 @@ body {
             <p class="link-title">Instagram</p>
             <p class="link-subtitle"></p>
         </div>
-        <div class="link-loading-bar"></div> </a>
+        <div class="link-loading-bar"></div>
+    </a>
     <a href="https://kick.com/MokrySuchar" target="_blank" class="link-button">
         <div class="link-icon">
             <img src="images/kick.png" alt="Kick Logo">
@@ -242,7 +244,8 @@ body {
             <p class="link-title">Kick</p>
             <p class="link-subtitle"></p>
         </div>
-        <div class="link-loading-bar"></div> </a> 
+        <div class="link-loading-bar"></div>
+    </a>
     <a href="https://x.com/MokrySuchar" target="_blank" class="link-button">
         <div class="link-icon">
             <img src="images/twitter.png" alt="Kick Logo">
@@ -251,7 +254,8 @@ body {
             <p class="link-title">Twitter</p>
             <p class="link-subtitle"></p>
         </div>
-        <div class="link-loading-bar"></div> </a>
+        <div class="link-loading-bar"></div>
+    </a>
     <a href="https://discord.com/invite/kw9TSBCh3Q" target="_blank" class="link-button">
         <div class="link-icon">
             <img src="images/discord2.png" alt="Discord Logo">
@@ -260,11 +264,10 @@ body {
             <p class="link-title">Discord</p>
             <p class="link-subtitle"></p>
         </div>
-        <div class="link-loading-bar"></div> </a>
+        <div class="link-loading-bar"></div>
+    </a>
 </div>
-
 </header>
-
 <main class="links-container">
     <a href="https://csgo-skins.com/?ref=Suchar" target="_blank" class="link-button">
         <img src="images/tylko18.png" alt="18+" class="age-restriction-image">
@@ -275,10 +278,8 @@ body {
             <p class="link-title">CSGOSKINS - 2.10 I 10% WIĘCEJ DO DOŁADOWANIA</p>
             <p class="link-subtitle"></p>
         </div>
-        <div class="link-loading-bar">
-        </div> 
+        <div class="link-loading-bar"></div>
     </a>
-     
     <a href="https://bit.ly/MokrySuchar_Fortuna_Bonus" target="_blank" class="link-button">
         <img src="images/tylko18.png" alt="18+" class="age-restriction-image">
         <div class="link-icon">
@@ -288,10 +289,8 @@ body {
             <p class="link-title">Z kodem SUCHAR 300 zł we freebetach na start! </p>
             <p class="link-subtitle"></p>
         </div>
-        <div class="link-loading-bar">
-        </div> 
+        <div class="link-loading-bar"></div>
     </a>
-     
     <a href="https://www.instant-gaming.com/?igr=suchar" target="_blank" class="link-button">
         <div class="link-icon">
             <img src="images/instant2.png" alt="instant icon">
@@ -300,10 +299,8 @@ body {
             <p class="link-title">Skorzystaj z mojego reflinku na Instant Gaming i ciesz się cenami aż do 90% taniej!</p>
             <p class="link-subtitle"></p>
         </div>
-        <div class="link-loading-bar">
-            </div> 
+        <div class="link-loading-bar"></div>
     </a>
-     
     <a href="http://pl.weareholy.com/suchar" class="link-button">
         <div class="link-icon">
             <img src="images/holy11.png" alt="instant icon">
@@ -312,10 +309,8 @@ body {
             <p class="link-title">Zamów zestaw startowy Holy! Z kodem: SUCHAR 10% Taniej!</p>
             <p class="link-subtitle"></p>
         </div>
-        <div class="link-loading-bar">        
-        </div> 
+        <div class="link-loading-bar"></div>
     </a>
-     
     <a href="https://tipo.live/p/mokrysuchar" target="_blank" class="link-button">
         <div class="link-icon">
             <img src="images/tipo4.png" alt="tipo icon">
@@ -324,8 +319,7 @@ body {
             <p class="link-title">DONATE!</p>
             <p class="link-subtitle"></p>
         </div>
-        <div class="link-loading-bar">
-            </div> 
+        <div class="link-loading-bar"></div>
     </a>
 </main>
 
