--- a/index.html
+++ b/index.html
@@ -147,61 +147,56 @@ body {
 
 /* Styl dla linków w sekcji links-container */
 .links-container {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    margin-top: 30px;
 }
 
-/* Dodatkowe style dla banerów */
-.link-image-container {
-    position: relative;
-    border-radius: 6px;
-    overflow: hidden;
+/* Styl dla wszystkich linków w "kafelkach" */
+.link-button {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 15px;
+    background-color: rgba(255, 255, 255, 0.1);
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    border-radius: 12px;
+    text-decoration: none;
+    color: #fff;
+    transition: background-color 0.3s ease, border-color 0.3s ease;
+    position: relative;
+    overflow: hidden;
 }
 
-.link-image-container .link-button {
-    padding: 0;
-    display: block;
+.link-button:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+    border-color: #00008b;
 }
 
-.link-image-banner {
-    width: 100%;
-    height: auto;
-    display: block;
-}
-
-.link-title-overlay {
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-    color: white;
-    font-size: 20px;
-    font-weight: 700;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
-}
-
-/* Stopka */
-.footer-logo {
-    margin-top: 40px;
-    opacity: 0.7;
-    font-size: 14px;
-}
-
-.footer-logo a {
-    color: #fff;
-    text-decoration: none;
-    font-weight: 700;
-}
-
-/* DODANO: Styl dla obrazka 18+ */
+/* Styl dla obrazka 18+ */
 .age-restriction-image {
-    position: absolute;
-    right: 5px;
-    top: 25px;
-    width: 20px;
-    height: auto;
-    z-index: 2;
+    position: absolute;
+    right: 5px;
+    top: 25px;
+    width: 20px;
+    height: auto;
+    z-index: 2;
+}
+
+/* Styl dla paska ładowania */
+.link-loading-bar {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 4px;
+    background-color: #000080;
+    transition: width 0.8s ease-in-out;
+}
+
+.link-button:hover .link-loading-bar {
+    width: 100%;
 }
     </style>
 </head>
