--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ body {
     margin-top: 20px;
 }
 
-/* Styl dla wszystkich linków w "kafelkach" */
+/* ZASTĄP SWÓJ STARY BLOK `.link-button` TYM PONIŻEJ */
 .link-button {
     display: flex;
     align-items: center;
@@ -104,13 +104,29 @@ body {
     text-decoration: none;
     color: #fff;
     transition: background-color 0.3s ease, border-color 0.3s ease;
+    /* TE DWIE WŁAŚCIWOŚCI SĄ KONIECZNE DLA ANIMACJI */
     position: relative;
+    overflow: hidden;
 }
 
 .link-button:hover {
     background-color: rgba(255, 255, 255, 0.2);
-    /* Kolor obramowania przy najechaniu myszką */
     border-color: #00008b;
+}
+
+/* DODAJ TEN KOD NA SAMYM KOŃCU SEKCJI `<style>` */
+.link-loading-bar {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 4px;
+    background-color: #000080;
+    transition: width 0.8s ease-in-out;
+}
+
+.link-button:hover .link-loading-bar {
+    width: 100%;
 }
 
 .link-icon {
@@ -216,14 +232,14 @@ body {
             <h1 class="profile-name">MokrySuchar</h1>
             <div class="social-icons">
                 <a href="https://www.twitch.tv/MokrySuchar" target="_blank" class="link-button">
-                    <div class="link-icon">
-                        <img src="images/twitch.png" alt="Twitch Logo">
-                    </div>
-                    <div class="link-text">
-                        <p class="link-title">Twitch</p>
-                        <p class="link-subtitle"></p>
-                    </div>
-                </a>
+    <div class="link-icon">
+        <img src="images/twitch.png" alt="Twitch Logo">
+    </div>
+    <div class="link-text">
+        <p class="link-title">Twitch</p>
+        <p class="link-subtitle"></p>
+    </div>
+    <div class="link-loading-bar"></div> </a>
                 <a href="https://www.instagram.com/mokrysuchar" target="_blank" class="link-button">
                     <div class="link-icon">
                         <img src="images/instagram.png" alt="Instagram Logo">
