--- a/index.html
+++ b/index.html
@@ -12,219 +12,215 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 
     <style>
-        /* TUTAJ JEST KOD CSS ODPOWIEDZIALNY ZA TŁO */
-body {
-    background-color: #000022;
-    background-image:
-        radial-gradient(circle at 100% 100%, transparent 10%, #0a0b16 15%, #000033 20%, #000044 30%, transparent 45%),
-        radial-gradient(circle at 0% 0%, transparent 10%, #0a0b16 15%, #000033 20%, #000044 30%, transparent 45%);
-    background-size: 200% 200%;
-    background-position: 50% 50%;
-    animation: ocean-waves 12s ease-in-out infinite alternate;
-    color: #fff;
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-}
-
-@keyframes ocean-waves {
-    from {
-        background-position: 0% 0%;
+    /* KOD CSS */
+    body {
+        background-color: #000022;
+        background-image:
+            radial-gradient(circle at 100% 100%, transparent 10%, #0a0b16 15%, #000033 20%, #000044 30%, transparent 45%),
+            radial-gradient(circle at 0% 0%, transparent 10%, #0a0b16 15%, #000033 20%, #000044 30%, transparent 45%);
+        background-size: 200% 200%;
+        background-position: 50% 50%;
+        animation: ocean-waves 12s ease-in-out infinite alternate;
+        color: #fff;
+        font-family: 'Poppins', sans-serif;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
     }
 
-    to {
-        background-position: 100% 100%;
+    @keyframes ocean-waves {
+        from {
+            background-position: 0% 0%;
+        }
+        to {
+            background-position: 100% 100%;
+        }
     }
-}
 
-.page-container {
-    width: 100%;
-    max-width: 600px;
-    padding: 20px;
-    box-sizing: border-box;
-    text-align: center;
-}
-
-.profile-avatar {
-    margin-top: 20px;
-}
-
-/* ZMIENIONY KOD DLA PULSUJĄCEJ RAMKI */
-.avatar-image {
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
-    object-fit: cover;
-    /* Nowe kolory dla pulsowania ramki */
-    box-shadow: 0 0 0 4px #4169e1, 0 0 20px 8px rgba(65, 105, 225, 0.7);
-    animation: glow-pulse 2.5s infinite;
-}
-
-@keyframes glow-pulse {
-    0% {
-        /* Granatowy kolor z blaskiem */
-        box-shadow: 0 0 0 4px #6495ed, 0 0 20px 8px rgba(100, 149, 237, 0.5);
+    .page-container {
+        width: 100%;
+        max-width: 600px;
+        padding: 20px;
+        box-sizing: border-box;
+        text-align: center;
     }
-    50% {
-        /* Niebieski kolor z silniejszym blaskiem */
-        box-shadow: 0 0 0 4px #1e90ff, 0 0 25px 12px rgba(30, 144, 255, 0.8);
+
+    .profile-avatar {
+        margin-top: 20px;
     }
-    100% {
-        /* Powrót do granatowego koloru */
-        box-shadow: 0 0 0 4px #6495ed, 0 0 20px 8px rgba(100, 149, 237, 0.5);
+
+    .avatar-image {
+        width: 120px;
+        height: 120px;
+        border-radius: 50%;
+        object-fit: cover;
+        box-shadow: 0 0 0 4px #4169e1, 0 0 20px 8px rgba(65, 105, 225, 0.7);
+        animation: glow-pulse 2.5s infinite;
     }
-}
 
-.profile-name {
-    margin-top: 10px;
-    font-size: 24px;
-    font-weight: 700;
-}
+    @keyframes glow-pulse {
+        0% {
+            box-shadow: 0 0 0 4px #6495ed, 0 0 20px 8px rgba(100, 149, 237, 0.5);
+        }
+        50% {
+            box-shadow: 0 0 0 4px #1e90ff, 0 0 25px 12px rgba(30, 144, 255, 0.8);
+        }
+        100% {
+            box-shadow: 0 0 0 4px #6495ed, 0 0 20px 8px rgba(100, 149, 237, 0.5);
+        }
+    }
 
-.social-icons {
-    display: flex;
-    justify-content: center;
-    gap: 16px;
-    margin-top: 20px;
-}
+    .profile-name {
+        margin-top: 10px;
+        font-size: 24px;
+        font-weight: 700;
+    }
 
-/* ZASTĄP SWÓJ STARY BLOK `.link-button` TYM PONIŻEJ */
-.link-button {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    padding: 15px;
-    background-color: rgba(255, 255, 255, 0.1);
-    border: 1px solid rgba(255, 255, 255, 0.2);
-    border-radius: 12px;
-    text-decoration: none;
-    color: #fff;
-    transition: background-color 0.3s ease, border-color 0.3s ease;
-    position: relative;
-    overflow: hidden;
-}
+    .social-icons {
+        display: flex;
+        justify-content: center;
+        gap: 16px;
+        margin-top: 20px;
+    }
 
-.link-button:hover {
-    background-color: rgba(255, 255, 255, 0.2);
-    border-color: #00008b;
-}
+    .link-button {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        padding: 15px;
+        background-color: rgba(255, 255, 255, 0.1);
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        border-radius: 12px;
+        text-decoration: none;
+        color: #fff;
+        transition: background-color 0.3s ease, border-color 0.3s ease;
+        position: relative;
+        overflow: hidden;
+    }
 
-/* ZASTĄP SWÓJ STARY BLOK `.link-text` TYM PONIŻEJ */
-.link-text {
-    text-align: left;
-    flex-grow: 1;
-}
+    .link-button:hover {
+        background-color: rgba(255, 255, 255, 0.2);
+        border-color: #00008b;
+    }
 
-/* DODAJ TEN KOD NA SAMYM KOŃCU SEKCJI `<style>` */
-.link-loading-bar {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 0;
-    height: 4px;
-    background-color: #000080;
-    transition: width 0.8s ease-in-out;
-}
+    .link-icon {
+        width: 48px;
+        height: 48px;
+        margin-right: 15px;
+        border-radius: 8px;
+        overflow: hidden;
+        flex-shrink: 0;
+    }
 
-.link-button:hover .link-loading-bar {
-    width: 100%;
-}
+    .link-icon img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 
-.link-icon {
-    width: 48px;
-    height: 48px;
-    margin-right: 15px;
-    border-radius: 8px;
-    overflow: hidden;
-    flex-shrink: 0;
-}
+    /* POPRAWIONY BLOK - JEST TERAZ TYLKO JEDEN */
+    .link-text {
+        text-align: left;
+        flex-grow: 1;
+    }
 
-.link-icon img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+    .link-title {
+        font-weight: 700;
+        font-size: 16px;
+        margin: 0;
+    }
 
-.link-text {
-    text-align: left;
-}
+    .link-subtitle {
+        font-weight: 400;
+        font-size: 12px;
+        opacity: 0.8;
+        margin: 0;
+    }
 
-.link-title {
-    font-weight: 700;
-    font-size: 16px;
-    margin: 0;
-}
+    .links-container {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        margin-top: 30px;
+    }
 
-.link-subtitle {
-    font-weight: 400;
-    font-size: 12px;
-    opacity: 0.8;
-    margin: 0;
-}
+    .link-image-container {
+        position: relative;
+        border-radius: 6px;
+        overflow: hidden;
+    }
 
-/* Styl dla linków w sekcji links-container */
-.links-container {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    margin-top: 30px;
-}
+    .link-image-container .link-button {
+        padding: 0;
+        display: block;
+    }
 
-/* Dodatkowe style dla banerów */
-.link-image-container {
-    position: relative;
-    border-radius: 6px;
-    overflow: hidden;
-}
+    .link-image-banner {
+        width: 100%;
+        height: auto;
+        display: block;
+    }
 
-.link-image-container .link-button {
-    padding: 0;
-    display: block;
-}
+    .link-title-overlay {
+        position: absolute;
+        bottom: 20px;
+        left: 20px;
+        color: white;
+        font-size: 20px;
+        font-weight: 700;
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+    }
 
-.link-image-banner {
-    width: 100%;
-    height: auto;
-    display: block;
-}
+    .footer-logo {
+        margin-top: 40px;
+        opacity: 0.7;
+        font-size: 14px;
+    }
 
-.link-title-overlay {
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-    color: white;
-    font-size: 20px;
-    font-weight: 700;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
-}
+    .footer-logo a {
+        color: #fff;
+        text-decoration: none;
+        font-weight: 700;
+    }
 
-/* Stopka */
-.footer-logo {
-    margin-top: 40px;
-    opacity: 0.7;
-    font-size: 14px;
-}
+    .age-restriction-image {
+        position: absolute;
+        right: 5px;
+        top: 25px;
+        width: 20px;
+        height: auto;
+        z-index: 2;
+    }
 
-.footer-logo a {
-    color: #fff;
-    text-decoration: none;
-    font-weight: 700;
-}
+    /* USUNIĘCIE RAMEK I ZMIANA TŁA TYLKO Z PRZYCISKÓW SOCIAL MEDIA */
+    .social-icons .link-button {
+        border: none;
+        background-color: transparent;
+    }
 
-/* DODANO: Styl dla obrazka 18+ */
-.age-restriction-image {
-    position: absolute;
-    right: 5px;
-    top: 25px;
-    width: 20px;
-    height: auto;
-    z-index: 2;
-}
-    </style>
+    .social-icons .link-button:hover {
+        border: none;
+        background-color: transparent;
+    }
+    
+    /* Pasek ładowania */
+    .link-loading-bar {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 0;
+        height: 4px;
+        background-color: #000080;
+        transition: width 0.8s ease-in-out;
+    }
+
+    .link-button:hover .link-loading-bar {
+        width: 100%;
+    }
+</style>
 </head>
 
 <body>
