--- a/index.html
+++ b/index.html
@@ -260,6 +260,15 @@
                         <p class="link-subtitle"></p>
                     </div>
                 </a> 
+                <a href="https://www.youtube.com/@MokrySucharLIVE" target="_blank" class="link-button">
+                    <div class="link-icon">
+                        <img src="images/yt.png" alt="yt Logo">
+                    </div>
+                    <div class="link-text">
+                        <p class="link-title"></p>
+                        <p class="link-subtitle"></p>
+                    </div>
+                </a>
                 <a href="https://x.com/MokrySuchar" target="_blank" class="link-button">
                     <div class="link-icon">
                         <img src="images/twitter.png" alt="Kick Logo">
