--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 </a> 
                 <a href="https://www.youtube.com/@MokrySucharLIVE" target="_blank" class="link-button">
                     <div class="link-icon">
-                        <img src="images/yt.png" alt="yt Logo">
+                        <img src="images/yt2.png" alt="yt Logo">
                     </div>
                     <div class="link-text">
                         <p class="link-title"></p>
