--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ body {
                         <img src="images/twitch.png" alt="Twitch Logo">
                     </div>
                     <div class="link-text">
-                        <p class="link-title">Twitch</p>
+                        <p class="link-title"></p>
                         <p class="link-subtitle"></p>
                     </div>
                 </a>
@@ -229,7 +229,7 @@ body {
                         <img src="images/instagram.png" alt="Instagram Logo">
                     </div>
                     <div class="link-text">
-                        <p class="link-title">Instagram</p>
+                        <p class="link-title"></p>
                         <p class="link-subtitle"></p>
                     </div>
                 </a>
@@ -238,7 +238,7 @@ body {
                         <img src="images/kick.png" alt="Kick Logo">
                     </div>
                     <div class="link-text">
-                        <p class="link-title">Kick</p>
+                        <p class="link-title"></p>
                         <p class="link-subtitle"></p>
                     </div>
                 </a> 
@@ -247,7 +247,7 @@ body {
                         <img src="images/yt4.png" alt="yt Logo">
                     </div>
                     <div class="link-text">
-                        <p class="link-title">Youtube</p>
+                        <p class="link-title"></p>
                         <p class="link-subtitle"></p>
                     </div>
                 </a> 
@@ -256,7 +256,7 @@ body {
                         <img src="images/twitter.png" alt="Kick Logo">
                     </div>
                     <div class="link-text">
-                        <p class="link-title">Twitter</p>
+                        <p class="link-title"></p>
                         <p class="link-subtitle"></p>
                     </div>
                 </a>
@@ -265,7 +265,7 @@ body {
             <img src="images/discord2.png" alt="Discord Logo">
         </div>
         <div class="link-text">
-            <p class="link-title">Discord</p>
+            <p class="link-title"></p>
             <p class="link-subtitle"></p>
         </div>
     </a>
