--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     .age-restriction-image {
         position: absolute;
         right: 5px;
-        top: 25px;
+        top: 30px;
         width: 20px;
         height: auto;
         z-index: 2;
@@ -292,7 +292,7 @@
 
         <main class="links-container">
     <a href="https://csgo-skins.com/?ref=Suchar" target="_blank" class="link-button">
-        <img src="images/tylko18.png" alt="18+" class="age-restriction-image">
+        <img src="images/tylko18x.png" alt="18+" class="age-restriction-image">
         <div class="link-icon">
             <img src="images/csgoskins.png" alt="CSGOSKINS icon">
         </div>
@@ -304,7 +304,7 @@
     </a>
     
     <a href="https://bit.ly/MokrySuchar_Fortuna_Bonus" target="_blank" class="link-button">
-        <img src="images/tylko18.png" alt="18+" class="age-restriction-image">
+        <img src="images/tylko18x.png" alt="18+" class="age-restriction-image">
         <div class="link-icon">
             <img src="images/fortuna3.png" alt="fortuna icon">
         </div>
