--- a/index.html
+++ b/index.html
@@ -351,8 +351,8 @@
 
         <!-- STOPKA Z OSTRZEŻENIEM -->
         <footer style="margin-top:40px; font-size:11px; color:#aaa; text-align:center; line-height:1.4; opacity:0.8;">
-            <strong>⚠️ GRAJ ODPOWIEDZIALNIE — NIE UZALEŻNIAJ SIĘ!</strong><br>
-            Graj odpowiedzialnie. Ta strona zawiera linki do zewnętrznych serwisów. 
+            <strong>⚠️ GRAJ ODPOWIEDZIALNIE ⚠️</strong><br>
+            Ta strona zawiera linki do zewnętrznych serwisów. 
             Korzystanie z nich odbywa się na własną odpowiedzialność i powinno być zgodne 
             z obowiązującym prawem w Twoim kraju. Nie promujemy działań nielegalnych 
             i nie ponosimy odpowiedzialności za skutki korzystania z tych serwisów.
