--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         left: 0;
         width: 0;
         height: 4px;
-        background-color: #000080;
+        background-color: #4169e1; /* Jaśniejszy kolor paska */
         transition: width 0.8s ease-in-out;
     }
 
@@ -162,7 +162,7 @@
         left: 0;
         width: 0;
         height: 4px;
-        background-color: #000080;
+        background-color: #4169e1; /* Jaśniejszy kolor paska */
         transition: width 0.8s ease-in-out;
     }
 
@@ -306,7 +306,7 @@
                 </div>
                 <div class="link-text">
                     <p class="link-title">CSGOSKINS - 2.10 I 10% WIĘCEJ DO DOŁADOWANIA</p>
-                    <p class="link-subtitle"></p>
+                    <p class="link-subtitle">Kod:SUCHAR</p>
                 </div>
                 <div class="link-loading-bar"></div>
             </a>
@@ -317,8 +317,8 @@
                     <img src="images/fortuna3.png" alt="fortuna icon">
                 </div>
                 <div class="link-text">
-                    <p class="link-title">Z kodem SUCHAR 300 zł we freebetach na start! </p>
-                    <p class="link-subtitle"></p>
+                    <p class="link-title">300 zł we freebetach na start! </p>
+                    <p class="link-subtitle">Kod:SUCHAR</p>
                 </div>
                 <div class="link-loading-bar"></div>
             </a>
@@ -339,8 +339,8 @@
                     <img src="images/holy11.png" alt="instant icon">
                 </div>
                 <div class="link-text">
-                    <p class="link-title">Zamów zestaw startowy Holy! Z kodem: SUCHAR 10% Taniej!</p>
-                    <p class="link-subtitle"></p>
+                    <p class="link-title">Zamów zestaw startowy Holy! 10% Taniej!</p>
+                    <p class="link-subtitle">Kod:SUCHAR</p>
                 </div>
                 <div class="link-loading-bar"></div>
             </a>
