--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                     <img src="images/instant2.png" alt="instant icon">
                 </div>
                 <div class="link-text">
-                    <p class="link-title">Skorzystaj z mojego reflinku na Instant Gaming i ciesz się cenami aż do 90% taniej!</p>
+                    <p class="link-title">Instant Gaming ciesz się cenami aż do 90% taniej!</p>
                     <p class="link-subtitle"></p>
                 </div>
                 <div class="link-loading-bar"></div>
