--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-top: 80px; /* Zwiększono górny margines, aby obniżyć cały nagłówek */
+        margin-top: 120px; /* Zwiększono górny margines, aby obniżyć cały nagłówek */
     }
 
     .avatar-image {
@@ -90,6 +90,15 @@
         margin-bottom: 20px;
         opacity: 0.8;
         color: #ccc;
+    }
+
+    /* Stylizacja dla ikonki kontaktu */
+    .contact-icon {
+        width: 20px;
+        height: 20px;
+        margin-left: 5px;
+        vertical-align: middle;
+        opacity: 1; /* Ustawiono na 1, aby nadpisać dziedziczenie przezroczystości */
     }
 
     /* Nowe kwadratowe kafelki dla ikonek społecznościowych */
@@ -297,7 +306,7 @@
             </div>
             <h1 class="profile-name">MokrySuchar</h1>
             
-            <p class="profile-contact">Kontakt: mokrysuchar@stormmedia.gg</p>
+            <p class="profile-contact">Kontakt: mokrysuchar@stormmedia.gg <img src="images/mokryez.png" alt="MokryEz Icon" class="contact-icon"></p>
             <div class="social-icons">
                 <a href="https://www.twitch.tv/MokrySuchar" target="_blank" class="social-link">
                     <img src="images/twitch.png" alt="Twitch Logo">
